tests/sources/invalid/types/binary_operator_type_errors.fire
// Type errors for individual binary operators, one mismatch per function so
// each error is independent of the others.
fn plusMismatch() -> int32 {
    b: bool = true;
    x: int32 = 5;
    y: int32 = x + b;  //~ ERROR FS-SEM-0010 @18
    return y;
}

fn andMismatch() -> bool {
    x: int32 = 5;
    y: bool = x && true;  //~ ERROR FS-SEM-0010 @17
    return y;
}

fn moduloMismatch() -> int32 {
    x: float32 = 1.0f32;
    y: int32 = x % 2;  //~ ERROR FS-SEM-0010 @18
    return y;
}

fn equalityMismatch() -> bool {
    x: int32 = 5;
    s: string = "a";
    y: bool = x == s;  //~ ERROR FS-SEM-0010 @17
    return y;
}

fn main() -> int32 {
    return 0;
}
